Add way to resolve studies based on curated- and user-study sources, and rework var type generics